//
//  StringResources.swift
//  BabbelGame
//
//  Created by Hakan Yildizay on 27.06.2022.
//

import Foundation

struct StringResources {

    struct GameView {
        public static var correctAttempts: String = "Correct Attemps:"
        public static var wrongAttempts: String = "Wrong Attempts:"
        public static var gameEnded: String = "Game Ended"
        public static var thankYou: String = "Thank you for playing"
        public static var close: String = "Close"
        public static var restart: String = "Restart"
    }

}
