...

    @IBOutlet weak var lblCorrectAttemptCount: UILabel!
    @IBOutlet weak var lblWrongAttemptCount: UILabel!
    @IBOutlet weak var lblQuestion: UILabel!
    @IBOutlet weak var lblAnswer: UILabel!
    @IBOutlet weak var centerYConstaint: NSLayoutConstraint!
    @IBOutlet weak var btnWrong: UIButton!
    @IBOutlet weak var btnCorrect: UIButton!

    var viewModel: GameViewModelProtocol?

    var currentQuestion: Word?
    var disposeBag = DisposeBag()

...
